# LightVulkanGraphics

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FBX_LOADER_README.md  README.md  SECURITY.md  SHADER_PATHS.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
assets/: License.txt
cmake/: LightVulkanGraphicsConfig.cmake.in  LightVulkanGraphicsVersion.h.in  RunPackageConsumerSmokeTest.cmake
examples/: demo_vulkan_graphics.cpp  fbx_rigged_example.cpp  simple_fbx_loader_example.cpp
include/: Camera.h  FBXLoader.h  GraphicsModel.h  Light.h  LightVulkanGraphicsLogging.h  RiggedObject.h  SceneGraph.h  VkApp.h  lightVulkanGraphics.h  pHeaders.h  pObject.h
shaders/: flexible_shape.frag  flexible_shape.vert  instanced_sphere.frag  instanced_sphere.vert  rigged_mesh.frag  rigged_mesh.vert  shadow_depth.vert  unlit.frag  unlit.vert  wireframe.frag  wireframe.vert
src/: FBXLoader.cpp  GraphicsModel.cpp  LightVulkanGraphicsLogging.cpp  RiggedObject.cpp  SceneGraph.cpp  VkApp.cpp  VkAppObjectState.cpp  lightVulkanGraphics.cpp  main.cpp  pObject.cpp
tests/package_consumer/: CMakeLists.txt  main.cpp
tests/unit/: test_core_types.cpp
